--- a/tpl/forumtheme1.html
+++ b/tpl/forumtheme1.html
@@ -111,6 +111,9 @@
     .value{
       display: none;
     }
+    .themeColor{
+      cursor: pointer;
+    }
 	</style>
 </head>
 
@@ -178,36 +181,36 @@
       <li class="fl"><table width="100%" border="0" class="listbd">
   <tr>
     <td><em class="bfn2">酒名：</em><input name="wine_name" type="text" class="seltext"></td>
-    <td><em class="bfn2">年份：</em><select name="year"  class="seltext">
-      <option>--選擇年份--</option>
+    <td><em class="bfn2">年份：</em><select name="wine_year"  class="seltext">
+      <option value="">--選擇年份--</option>
     </select></td>
-    <td><em class="bfn2">酒類：</em><select name="category"  class="seltext">
-      <option>--選擇酒類--</option>
+    <td><em class="bfn2">酒類：</em><select name="wine_category"  class="seltext">
+      <option value="">--選擇酒類--</option>
       <{$wineCategory}>
     </select></td>
   </tr>
   <tr>
-    <td><em class="bfn2">價錢：</em><select name="price"  class="seltext">
-      <option>--選擇價錢--</option>
+    <td><em class="bfn2">價錢：</em><select name="wine_price"  class="seltext">
+      <option value="">--選擇價錢--</option>
       <{$price}>
     </select></td>
     <td colspan="2"><em class="bfn2">佳餚名稱：</em>
-    <select name="origin" order="1" class="seltext foodOption">
-      <option>--選擇国家菜式--</option>
-    </select><select name="type" order="2" class="seltext foodOption">
-      <option>--選擇菜式--</option>
-    </select><select name="name" order="3" class="seltext foodOption">
-      <option>--選擇菜名--</option>
+    <select name="food_origin" order="1" class="seltext foodOption">
+      <option value="">--選擇国家菜式--</option>
+    </select><select name="food_type" order="2" class="seltext foodOption">
+      <option value="">--選擇菜式--</option>
+    </select><select name="food_name" order="3" class="seltext foodOption">
+      <option value="">--選擇菜名--</option>
     </select></td>
     </tr>
   <tr>
     <td><em class="bfn2">煮法：</em>
-    <select name="method" order="4" class="seltext foodOption">
-      <option>--選擇煮法--</option>
+    <select name="food_method" order="4" class="seltext foodOption">
+      <option value="">--選擇煮法--</option>
     </select></td>
     <td><em class="bfn2">味道：</em>
-    <select name="taste" order="5" class="seltext foodOption">
-      <option>--選擇味道--</option>
+    <select name="food_taste" order="5" class="seltext foodOption">
+      <option value="">--選擇味道--</option>
     </select></td>
     <td><em class="bfn2" style="float: left;">絕配度：</em>
       <ul class="match">
@@ -217,17 +220,30 @@
       <li class="star"><a href="javascript:;">4</a></li>
       <li class="star"><a href="javascript:;">5</a></li>
      </ul>
-     <input type="text" name="match" class="value">
+     <input type="text" name="matching" class="value">
     </td>
   </tr>
 </table>
 </li>
+  <li class="black1" style="padding-left:2px;margin-top: 20px;"><em class="bfn2" style="float: left;">選擇主題顏色：</em><br>
+         <span class="flnew">
+          <em class="size35 sbg1 themeColor" value="0"></em>
+          <em class="size35 sbg2 themeColor" value="1"></em>
+          <em class="size35 sbg3 themeColor" value="2"></em>
+          <em class="size35 sbg4 themeColor" value="3"></em> 
+          <em class="size35 sbg5 themeColor" value="4"></em>
+          </span>
+           <span class="flnew">
+          <!-- <em class="rt btback">預覽</em> -->
+          </span>
+          </li>
+          <input type="text" name="theme_color" class="value">
    <li>短評：</li> 
    <li  class="pd0"><textarea name="short_comment" cols="" rows="3" class="mtext"></textarea></li>
  </div>
    <div class="next wow fadeInDown">
    <input type="text" name="themeType" class="value" value="wine">
-     <input type="submit" name="" class="rt btback" value="下一步">
+     <input type="submit" name="" class="rt btback subBtn" value="提交">
   
  
    </div>
@@ -286,8 +302,25 @@ $(function(){
   }
 
 
+  $(".subBtn").click(function(){
+    var wine_img = $("input[name=wine_img]").val();
+    var food_img = $("input[name=food_img]").val();
+    var wine_name = $("input[name=wine_name]").val();
+    var check = new Array(wine_img,food_img,wine_name);
+    var info = new Array("請上傳美酒圖片","請上傳美食圖片","請輸入美酒名稱");
+    for(i=0;i<check.length;i++){
+      if(check[i] == ""){
+        alert(info[i]);
+        return false;
+      }
+    }
+  });
 
-
+  $(".themeColor").click(function(){
+    $(this).css({"border":"3px solid rgb(140, 176, 68)"});
+    $(".themeColor").not($(this)).css({"border":"none"});
+    $("input[name=theme_color]").val($(this).attr("value"));
+  })
 
 
 
@@ -300,7 +333,7 @@ $(function(){
     var options = eval('(' + json + ')');
     for(i=0;i<options.length;i++){
       if(options[i]['pId'] == 1){
-        $("select[name=origin]").append("<option value='"+options[i]['id']+"'>"+options[i]['name']+"</option>");
+        $("select[name=food_origin]").append("<option value='"+options[i]['id']+"'>"+options[i]['name']+"</option>");
       }
     }
 
@@ -317,7 +350,7 @@ $(function(){
     var time = new Date();
     var year = time.getFullYear();
     for(i=1970;i<=year;i++){
-      $("select[name=year]").append("<option value="+i+">"+i+"年</option>");
+      $("select[name=wine_year]").append("<option value="+i+">"+i+"年</option>");
     }
 
 })
@@ -359,6 +392,11 @@ function doUpload() {
           contentType: false,  
           processData: false,  
           success: function (returndata) {
+            if(returndata == "false"){
+              alert("請先登錄");
+              location.reload();
+              return false;
+            }
             var order = $("input[name=order]").val();
             if(order == "1"){
               var data = eval('(' + returndata + ')');
