--- a/tpl/forumtheme2.html
+++ b/tpl/forumtheme2.html
@@ -99,11 +99,11 @@
           </li>
           <input type="text" name="theme_color" class="value">
       <li class="f18">主題描述及內文：</li> 
-         <li  class="pd0"><input name="title" type="text" class="mtext"></li>
-   <li  class="pd0"><textarea cols="" name="content" rows="3" class="mtext"></textarea></li>
+         <li  class="pd0"><input name="short_comment" type="text" class="mtext"></li>
+   <li  class="pd0"><textarea cols="" name="detail_content" rows="3" class="mtext"></textarea></li>
  </div>
    <div class="next wow fadeInDown">
-   <input type="text" name="themeType" class="value" value="chat">
+   <input type="text" name="themeType" class="value" value="matching">
      <h2><input type="submit" class="rt btback" value="提交"></h2>
   </form>
  
