--- a/tpl/forum.html
+++ b/tpl/forum.html
@@ -134,7 +134,22 @@ $(function(){
         success:function(data){
             var dataObj = eval('(' + data + ')');
             for(i=0;i<dataObj.length;i++){
-            str = '<div class="row  forum mb20 fpd10" style="background:'+dataObj[i]['theme_color']+'">\
+              if(dataObj[i]['wine_name'] == ""){
+                str = '<div class="row  forum mb20 fpd10" style="background:'+dataObj[i]['theme_color']+';padding: 12px 0px;">\
+                <div class="grid_12 u1pr">\
+                  <div class="fl">\
+                    \
+                  </div>\
+                  <div class="grid_8 fl">\
+                    <p class="fn18"><a class="forum_matching_detail" id="'+dataObj[i]['id']+'" theme="forum_chat"><em class="bfn1">'+dataObj[i]['short_comment']+' </em></a><em class="font15 fc1">網友:</em>\
+                     <em class="bfn2">'+dataObj[i]['username']+'</em> <em class="fn13 fc1">'+translateTime(dataObj[i]['create_time'])+'</em> </p>\
+                  <p class="fc1" style="text-overflow: ellipsis;">'+dataObj[i]['detail_content']+'</p>\
+                  <p class="mt15"><a class="bt5" href="#">'+dataObj[i]['like_num']+'</a><a class="btno" href="#">'+dataObj[i]['dislike_num']+'</a> </p>\
+                  </div>\
+                </div>\
+                </div>';
+              }else{
+                str = '<div class="row  forum mb20 fpd10" style="background:'+dataObj[i]['theme_color']+'">\
                 <div class="grid_12 u1pr">\
                   <div class="fl">\
                     <div >\
@@ -142,19 +157,22 @@ $(function(){
                     </div>\
                   </div>\
                   <div class="grid_8 fl">\
-                    <p class="fn18"><a class="forum_matching_detail" id="'+dataObj[i]['id']+'"><em class="bfn1">'+dataObj[i]['wine_name']+' </em><em class="bfn2"> 配 </em><em class="bfn3">'+dataObj[i]['food_name']+'</em></a><em class="font15 fc1">網友:</em>\
+                    <p class="fn18"><a class="forum_matching_detail" id="'+dataObj[i]['id']+'" theme="forum_matching"><em class="bfn1">'+dataObj[i]['wine_name']+' </em><em class="bfn2"> 配 </em><em class="bfn3">'+dataObj[i]['food_name']+'</em></a><em class="font15 fc1">網友:</em>\
                      <em class="bfn2">'+dataObj[i]['username']+'</em> <em class="fn13 fc1">'+translateTime(dataObj[i]['create_time'])+'</em> </p>\
                   <p class="fc1">'+dataObj[i]['short_comment']+'</p>\
                   <p class="mt15"><a class="bt5" href="#">'+dataObj[i]['like_num']+'</a><a class="btno" href="#">'+dataObj[i]['dislike_num']+'</a> </p>\
                   </div>\
                 </div>\
                 </div>';
+              }
+            
             $(".forumCont").append(str);
             }
             //console.log(data);
             $(".forum_matching_detail").click(function(){
                 var id = $(this).attr("id");
-                window.location.href="<{spUrl c=frontFuns a=forum_matching_detail theme=forum_matching}>&id="+id;
+                var theme = $(this).attr("theme");
+                window.location.href="<{spUrl c=frontFuns a=forum_matching_detail}>&theme="+theme+"&id="+id;
             });
         }
     })
