--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -99,11 +99,21 @@
 		</dd>
 	</dl>
 		<dl id="menu-picture">
-			<dt><i class="Hui-iconfont">&#xe62b;</i> 論壇<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe701;</i> 食物對對碰<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-food-option'}>" data-title="酒商建議管理" href="javascript:void(0)">酒商建議管理</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-matching-list'}>" data-title="品酒師建議管理" href="javascript:void(0)">品酒師建議管理</a></li>
+			</ul>
+		</dd>
+	</dl>
+		<dl id="menu-picture">
+			<dt><i class="Hui-iconfont">&#xe62b;</i> 吹水園地<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-food-option'}>" data-title="食物選項" href="javascript:void(0)">食物選項管理</a></li>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-matching-list'}>" data-title="配對主題" href="javascript:void(0)">配對主題</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-chat-list'}>" data-title="吹水主題" href="javascript:void(0)">吹水主題</a></li>
 			</ul>
 		</dd>
 	</dl>
