--- a/tpl/header.html
+++ b/tpl/header.html
@@ -128,7 +128,7 @@
             <ul class="sf-menu">             
               <li class="current"><a href="<{spUrl c=main a=aboutus}>">關於我們</a></li>
               <li><a href="<{spUrl c=main a=activicity}>">達人搞乜鬼</a></li>
-              <li><a href="index-2.html">食物對對碰</a>
+              <li><a href="<{spUrl c=main a=searching}>">食物對對碰</a>
               </li>
                 <li><a href="<{spUrl c=main a=forum}>">吹水園地</a></li>
               <li><a href="<{spUrl c=main a=video}>">影院</a>
