--- a/tpl/back/forum-chat-list.html
+++ b/tpl/back/forum-chat-list.html
@@ -202,7 +202,7 @@ $(function(){
 	function dataHandle(){
 		var id = "<{$column}>";
 		$.ajax({
-			url:"<{spUrl c=backFuns a=forum_matching_data theme=forum_matching}>",
+			url:"<{spUrl c=backFuns a=forum_matching_data theme=forum_chat}>",
 			type:"post",
 			data:{id:id},
 			success:function(data){
@@ -216,21 +216,19 @@ $(function(){
 						case "1":display = '<span class="label label-success radius">已審核</span>';displaySwitch = '<a style="text-decoration:none" onclick="article_stop(this,'+dataObj[i]['id']+')" href="javascript:;" title="下線"><i class="Hui-iconfont">&#xe6de;</i></a>';break;
 						case "2":display = '<span class="label label-success radius" style="background-color: #a0a0a0;">已下線</span>';displaySwitch = '<a style="text-decoration:none" onClick="article_start(this,'+dataObj[i]['id']+')" href="javascript:;" title="審核"><i class="Hui-iconfont">&#xe603;</i></a>';break;
 					}
-					if(dataObj[i]['wine_name'] != ""){
-						var str = '\
-						<tr class="text-c">\
-						<td><input type="checkbox" value="" name=""></td>\
-						<td>'+dataObj[i]['id']+'</td>\
-						<td>'+dataObj[i]['wine_name']+'</td>\
-						<td>'+dataObj[i]['food_name']+'</td>\
-						<td>'+dataObj[i]['short_comment']+'</td>\
-						<td>'+dataObj[i]['username']+'</td>\
-						<td>'+translateTime(dataObj[i]['create_time'])+'</td>\
-						<td class="td-status">'+display+'</td>\
-						<td>'+dataObj[i]['display_by']+'</td>\
-						<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+					var str = '\
+					<tr class="text-c">\
+					<td><input type="checkbox" value="" name=""></td>\
+					<td>'+dataObj[i]['id']+'</td>\
+					<td>'+dataObj[i]['wine_name']+'</td>\
+					<td>'+dataObj[i]['food_name']+'</td>\
+					<td>'+dataObj[i]['short_comment']+'</td>\
+					<td>'+dataObj[i]['username']+'</td>\
+					<td>'+translateTime(dataObj[i]['create_time'])+'</td>\
+					<td class="td-status">'+display+'</td>\
+					<td>'+dataObj[i]['display_by']+'</td>\
+					<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
-					}
 					$(".dataTable tbody").append(str);
 				}
 				$('.table-sort').dataTable({
