--- a/tpl/back/product-list.html
+++ b/tpl/back/product-list.html
@@ -25,7 +25,7 @@
 		overflow: hidden;
 	}
 </style>
-<title>建材列表</title>
+<title>產品列表</title>
 <link rel="stylesheet" href="lib/zTree/v3/css/zTreeStyle/zTreeStyle.css" type="text/css">
 </head>
 <body class="pos-r">
