--- a/tpl/back/product-wine-add.html
+++ b/tpl/back/product-wine-add.html
@@ -88,7 +88,7 @@
 				</select>
 				</span> </div>
 		</div>
-		<div class="row cl">
+		<!-- <div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">配對食物：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
 				<select class="select" name="food">
@@ -105,7 +105,7 @@
 					<option value="9">各國菜式</option>
 				</select>
 				</span> </div>
-		</div>
+		</div> -->
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">供應商：</label>
 			<div class="formControls col-xs-8 col-sm-9">
