--- a/tpl/forum1.html
+++ b/tpl/forum1.html
@@ -89,16 +89,16 @@
   </tr>
   <tr>
     <td><em class="bfn2">價錢：</em><{$wine_price}></td>
-    <td colspan="2"><em class="bfn2">佳餚名稱：</em> <{$food_origin}> &gt; <{$food_type}> &gt; <{$food_name}></td>
+    <td colspan="2"><em class="bfn2">佳餚名稱：</em> <{$food_category}> &gt; <{$food_type}> &gt; <{$food_name}> <{$custom_food_name}></td>
     </tr>
   <tr>
-    <td><em class="bfn2">煮法：</em> <{$food_method}></td>
+    <!-- <td><em class="bfn2">煮法：</em> <{$food_method}></td> -->
     <td><em class="bfn2">味道：</em><{$food_taste}></td>
     <td><em class="bfn2">絕配度：</em><span class="stars"></span></td>
   </tr>
 </table>
 </li>
-    <p><{$detail_content}></p>
+    <{$detail_content}>
     <p class="apc"> <a class="bt5 likeBtn" name="like"><{$like_num}></a><a class="btno likeBtn" name="dislike"><{$dislike_num}></a> </p>       
         </div>
    <div class="say wow fadeInDown">
