--- a/tpl/back/forum-chat-list.html
+++ b/tpl/back/forum-chat-list.html
@@ -45,9 +45,8 @@
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
 					<th>ID</th>
-					<th>酒名</th>
-					<th>食物</th>
-					<th>短評</th>
+					<th>標題</th>
+					<th>內容</th>
 					<th>創建者</th>
 					<th>創建時間</th>
 					<th>審核狀態</th>
@@ -202,7 +201,7 @@ $(function(){
 	function dataHandle(){
 		var id = "<{$column}>";
 		$.ajax({
-			url:"<{spUrl c=backFuns a=forum_matching_data theme=forum_chat}>",
+			url:"<{spUrl c=backFuns a=forumData}>",
 			type:"post",
 			data:{id:id},
 			success:function(data){
@@ -216,13 +215,13 @@ $(function(){
 						case "1":display = '<span class="label label-success radius">已審核</span>';displaySwitch = '<a style="text-decoration:none" onclick="article_stop(this,'+dataObj[i]['id']+')" href="javascript:;" title="下線"><i class="Hui-iconfont">&#xe6de;</i></a>';break;
 						case "2":display = '<span class="label label-success radius" style="background-color: #a0a0a0;">已下線</span>';displaySwitch = '<a style="text-decoration:none" onClick="article_start(this,'+dataObj[i]['id']+')" href="javascript:;" title="審核"><i class="Hui-iconfont">&#xe603;</i></a>';break;
 					}
+					if(dataObj[i]['wine_name'] == ""){
 					var str = '\
 					<tr class="text-c">\
 					<td><input type="checkbox" value="" name=""></td>\
 					<td>'+dataObj[i]['id']+'</td>\
-					<td>'+dataObj[i]['wine_name']+'</td>\
-					<td>'+dataObj[i]['food_name']+'</td>\
 					<td>'+dataObj[i]['short_comment']+'</td>\
+					<td style="text-overflow:ellipsis">'+dataObj[i]['detail_content']+'</td>\
 					<td>'+dataObj[i]['username']+'</td>\
 					<td>'+translateTime(dataObj[i]['create_time'])+'</td>\
 					<td class="td-status">'+display+'</td>\
@@ -230,6 +229,7 @@ $(function(){
 					<td class="f-14 td-manage">'+displaySwitch+' <a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
+					}
 				}
 				$('.table-sort').dataTable({
 					"aaSorting": [[ 1, "desc" ]],//默认第几个排序
