--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -54,11 +54,11 @@
 				<li id="Hui-msg"> <a href="#" title="消息"><span class="badge badge-danger">1</span><i class="Hui-iconfont" style="font-size:18px">&#xe68a;</i></a> </li>
 				<li id="Hui-skin" class="dropDown right dropDown_hover"> <a href="javascript:;" class="dropDown_A" title="换肤"><i class="Hui-iconfont" style="font-size:18px">&#xe62a;</i></a>
 					<ul class="dropDown-menu menu radius box-shadow">
-						<li><a href="javascript:;" data-val="default" title="默认（黑色）">默认（黑色）</a></li>
-						<li><a href="javascript:;" data-val="blue" title="蓝色">蓝色</a></li>
-						<li><a href="javascript:;" data-val="green" title="绿色">绿色</a></li>
-						<li><a href="javascript:;" data-val="red" title="红色">红色</a></li>
-						<li><a href="javascript:;" data-val="yellow" title="黄色">黄色</a></li>
+						<li><a href="javascript:;" data-val="green" title="綠色(默認)">綠色(默認)</a></li>
+						<li><a href="javascript:;" data-val="default" title="黑色">黑色</a></li>
+						<li><a href="javascript:;" data-val="blue" title="藍色">藍色</a></li>
+						<li><a href="javascript:;" data-val="red" title="紅色">紅色</a></li>
+						<li><a href="javascript:;" data-val="yellow" title="黃色">黃色</a></li>
 						<li><a href="javascript:;" data-val="orange" title="橙色">橙色</a></li>
 					</ul>
 				</li>
@@ -95,15 +95,7 @@
 					<!-- <li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-brand'}>" data-title="品牌管理" href="javascript:void(0)">品牌管理</a></li> -->
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-category'}>" data-title="分類管理" href="javascript:void(0)">分類管理</a></li>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-list'}>" data-title="產品管理" href="javascript:void(0)">產品管理</a></li>
-			</ul>
-		</dd>
-	</dl>
-		<dl id="menu-picture">
-			<dt><i class="Hui-iconfont">&#xe701;</i> 食物對對碰<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-food-option'}>" data-title="酒商建議管理" href="javascript:void(0)">酒商建議管理</a></li>
-					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-matching-list'}>" data-title="品酒師建議管理" href="javascript:void(0)">品酒師建議管理</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='product-matching'}>" data-title="配對管理" href="javascript:void(0)">配對管理</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -111,7 +103,6 @@
 			<dt><i class="Hui-iconfont">&#xe62b;</i> 吹水園地<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-food-option'}>" data-title="食物選項" href="javascript:void(0)">食物選項管理</a></li>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-matching-list'}>" data-title="配對主題" href="javascript:void(0)">配對主題</a></li>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='forum-chat-list'}>" data-title="吹水主題" href="javascript:void(0)">吹水主題</a></li>
 			</ul>
