--- a/tpl/back/product-list-iframe_food.html
+++ b/tpl/back/product-list-iframe_food.html
@@ -220,7 +220,7 @@ $(function(){
 						<td>'+dataObj[i]['method']+'</td>\
 						<td>'+dataObj[i]['taste']+'</td>\
 						<td>'+dataObj[i]['keyword']+'</td>\
-						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+						<td class="f-14 td-manage"><a class="addMatching" onclick="addMatching('+dataObj[i]['id']+','+dataObj[i]['category_id']+',\''+dataObj[i]['name']+'\')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加配對</a><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
 				}
@@ -244,6 +244,10 @@ $(function(){
 	}
 dataHandle(category_id,category_pId);
 })
+
+function addMatching(id,category_id,name){
+	parent.product_add('添加配對','<{spUrl c=backFuns a=productMatchingAdd type=food}>&id='+id+'&category_id'+category_id+'&name='+name);
+}
 
 </script> 
 </body>
