--- a/tpl/back/product-list-iframe_wine.html
+++ b/tpl/back/product-list-iframe_wine.html
@@ -23,6 +23,9 @@
 	html,body{
 		overflow: auto!important;
 	}
+	.addMatching{
+		font-size: 12px;
+	}
 </style>
 <title>產品列表</title>
 </head>
@@ -49,7 +52,6 @@
 						<th>葡萄</th>
 						<th>年份</th>
 						<th>價格</th>
-						<th>配對食物</th>
 						<th>供應商</th>
 						<th>操作</th>
 					</tr>
@@ -199,9 +201,6 @@ $(function(){
 		parent.product_add('添加產品--'+category_name,'<{spUrl c=backFuns a=productAddPage}>&category_id='+category_id+'&category_pId='+category_pId);
 	})
 
-	
-
-
 	function dataHandle(category_id,category_pId){
 		$.ajax({
 			url:"<{spUrl c=backFuns a=productQuery}>",
@@ -209,7 +208,6 @@ $(function(){
 			data:{category_id:category_id,category_pId:category_pId},
 			success:function(data){
 				$PRICE = Array("<$50","$51-$100","$101-$150","$151-$200","$201-$300","$301-$400",">$400");
-				$FOOD = Array("牛","羊","豬","家禽","海鮮","小食","甜品","頭盤","街頭食品","各國菜式");
 				if(data != ""){
 					var dataObj = eval('(' + data + ')');
 					$(".rows").html(dataObj.length);
@@ -224,9 +222,8 @@ $(function(){
 						<td>'+dataObj[i]['grape']+'</td>\
 						<td>'+dataObj[i]['year']+'</td>\
 						<td>'+$PRICE[dataObj[i]['price']]+'</td>\
-						<td>'+$FOOD[dataObj[i]['food']]+'</td>\
 						<td>'+dataObj[i]['supplier']+'</td>\
-						<td class="f-14 td-manage"><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
+						<td class="f-14 td-manage"><a class="addMatching" onclick="addMatching('+dataObj[i]['id']+','+dataObj[i]['category_id']+',\''+dataObj[i]['name']+'\')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加配對</a><a style="text-decoration:none" class="ml-5" data-title="編輯" data-href="<{spUrl c=backFuns a=articleDataEdit columnId=<{$column}> title=<{$title}>}>&articleId='+dataObj[i]['id']+'" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'+dataObj[i]['id']+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>\
 					</tr>'
 					$(".dataTable tbody").append(str);
 				}
@@ -240,7 +237,7 @@ $(function(){
 					"pading":false,
 					"aoColumnDefs": [
 					  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-					  {"orderable":false,"aTargets":[0,8]}// 不参与排序的列
+					  {"orderable":false,"aTargets":[0,9]}// 不参与排序的列
 					]
 				});
 //console.log(data);
@@ -250,6 +247,11 @@ $(function(){
 	}
 dataHandle(category_id,category_pId);
 })
+
+function addMatching(id,category_id,name){
+	parent.product_add('添加配對','<{spUrl c=backFuns a=productMatchingAdd type=wine}>&id='+id+'&category_id'+category_id+'&name='+name);
+}
+
 
 </script> 
 </body>
