--- a/tpl/forum1.html
+++ b/tpl/forum1.html
@@ -67,7 +67,7 @@
       <div class="wrapper1">
       <div class="container">
         <div class="row article">    
-              <h2><a class="rt btback" href="<{spUrl c=main a=forum}>">返回上一頁</a></h2>
+              <h2><a class="rt btback" onclick="window.history.back();">返回上一頁</a></h2>
               </div>
        
       </div>      
