--- a/tpl/productFoodDetail.html
+++ b/tpl/productFoodDetail.html
@@ -6,7 +6,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>jQuery网站商品图片放大镜效</title>
+<title></title>
 
 <script type="text/javascript" src="js/jquery.1.4.2-min.js"></script>
 
@@ -16,6 +16,8 @@
 html,body{
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
+	margin: 0;
 }
 
 /*body{font:18px "宋体",arial,sans-serif;color:#585858;}*/
@@ -94,12 +96,12 @@ a:active{color:#1d7400;}
 #bigView img{position:absolute;}
 
 .content{
-	padding: 50px 20px;
+	padding: 20px 20px;
 	height: 500px;
 	width: 850px;
 	margin: 0 auto;
 	margin-top: 30px;
-	border: 1px solid #eee;
+
 }
 
 .content div{
