--- a/tpl/search.html
+++ b/tpl/search.html
@@ -25,7 +25,11 @@
     });
   </script>
   <!--<![endif]-->
-  
+  <style>
+  .mb20{
+    cursor: pointer;
+  }
+  </style>
   <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
   <![endif]-->
@@ -109,7 +113,7 @@ $(function(){
     window.location.href="<{spUrl c=frontFuns a=foodToWine}>";
   });
   $(".wineToFood").click(function(){
-    window.location.href="www.baidu.com";
+    window.location.href="<{spUrl c=frontFuns a=wineToFood}>";
   });
 })
 </script>
