--- a/tpl/search-select-result.html
+++ b/tpl/search-select-result.html
@@ -32,7 +32,7 @@
     .resultMsg{
       text-align: center;
       padding: 100px 0px;
-      font-size: 20px;
+      font-size: 15px;
     }
   </style>
 </head>
@@ -156,6 +156,7 @@
         }else{
           $(".contentData").html("<div class='resultMsg'>沒有找到相關信息。</div>");
         }
+        //console.log(data);
       }
     });
    }
